# SUS-FEI

./: CMakeLists.txt  Codigo.c  README.md  Requisitos_corrigido.docx  atendPrior.c  atendPrior.h  atendimento.c  atendimento.h  biblioteca.c  biblioteca.h  cadastrar.c  cadastrar.h  desfazer.c  desfazer.h  main.c  pesquisa.c  pesquisa.h  structs.h
